[gd_scene load_steps=24 format=4 uid="uid://qyfx2eeyxl5h"]

[ext_resource type="Texture2D" uid="uid://uiawry51ph4o" path="res://images/background.png" id="1_yradt"]
[ext_resource type="Texture2D" uid="uid://cb3xix8ip5c7o" path="res://images/outlines.png" id="2_1p0jb"]
[ext_resource type="Texture2D" uid="uid://bax4qsx84ekwh" path="res://images/sprite_blooks.png" id="3_n63ye"]
[ext_resource type="Texture2D" uid="uid://d2g7fvn7mndpk" path="res://images/shadow_gradient.png" id="4_0k2wj"]
[ext_resource type="Script" uid="uid://blwkc82mtnxyc" path="res://scripts/mouse.gd" id="5_wgba0"]
[ext_resource type="PackedScene" uid="uid://cb5ac33fsghhx" path="res://interactions/interacting_component.tscn" id="6_ppg1l"]
[ext_resource type="Script" uid="uid://7tbf4rbn1kk" path="res://scripts/Exam.gd" id="7_n63ye"]
[ext_resource type="PackedScene" uid="uid://chjnxo10743q0" path="res://interactions/Interactable.tscn" id="8_0k2wj"]
[ext_resource type="Script" uid="uid://dws0oeyl4rw0m" path="res://scripts/pin.gd" id="8_n63ye"]
[ext_resource type="Script" uid="uid://b0ciuf8g11af4" path="res://scripts/download.gd" id="9_wgba0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_13h2g"]
texture = ExtResource("1_yradt")
texture_region_size = Vector2i(45, 45)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dl7k2"]
texture = ExtResource("2_1p0jb")
texture_region_size = Vector2i(45, 45)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ejme4"]
texture = ExtResource("3_n63ye")
texture_region_size = Vector2i(45, 45)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8hq5y"]
texture = ExtResource("4_0k2wj")
texture_region_size = Vector2i(45, 45)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_butt4"]
tile_size = Vector2i(45, 45)
sources/3 = SubResource("TileSetAtlasSource_ejme4")
sources/0 = SubResource("TileSetAtlasSource_13h2g")
sources/1 = SubResource("TileSetAtlasSource_dl7k2")
sources/4 = SubResource("TileSetAtlasSource_8hq5y")

[sub_resource type="LabelSettings" id="LabelSettings_qv2gn"]
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1p0jb"]
font_size = 40
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_n63ye"]
font_size = 23
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1p0jb"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n63ye"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Theme" id="Theme_n63ye"]
LineEdit/colors/caret_color = Color(0, 0, 0, 1)
LineEdit/colors/clear_button_color = Color(0, 0, 0, 1)
LineEdit/colors/clear_button_color_pressed = Color(0, 0, 0, 1)
LineEdit/colors/font_color = Color(0, 0, 0, 1)
LineEdit/colors/font_outline_color = Color(0, 0, 0, 1)
LineEdit/colors/font_placeholder_color = Color(0, 0, 0, 1)
LineEdit/colors/font_selected_color = Color(0, 0, 0, 1)
LineEdit/colors/font_uneditable_color = Color(0, 0, 0, 1)
LineEdit/colors/selection_color = Color(0, 0, 0, 1)
LineEdit/constants/caret_width = 2
LineEdit/constants/minimum_character_width = 0
LineEdit/constants/outline_size = 0
LineEdit/font_sizes/font_size = 80
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource("StyleBoxFlat_1p0jb")
LineEdit/styles/normal = SubResource("StyleBoxFlat_n63ye")
LineEdit/styles/read_only = null

[sub_resource type="LabelSettings" id="LabelSettings_wgba0"]
font_size = 20
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppg1l"]
size = Vector2(180, 180)

[node name="ExamsFolder" type="Node2D"]
script = ExtResource("7_n63ye")

[node name="TileMap" type="Node2D" parent="."]

[node name="Back" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AADx//f/BAADAAAAAADx//j/BAADAAAAAADx//n/BAADAAAAAADx//r/BAADAAAAAADx//v/BAADAAAAAADx//z/BAADAAAAAADx//3/BAADAAAAAADx//7/BAADAAAAAADx////BAADAAAAAADx/wAABAADAAAAAADx/wEABAADAAAAAADx/wIABAADAAAAAADx/wMABAADAAAAAADx/wQABAADAAAAAADx/wUABAADAAAAAADx/wYAAAAAAAEAAADx/wcAAAAAAAEAAADx/wgAAAAAAAEAAADy//f/BAADAAAAAADy//j/BAADAAAAAADy//n/BAADAAAAAADy//r/BAADAAAAAADy//v/BAADAAAAAADy//z/BAADAAAAAADy//3/BAADAAAAAADy//7/BAADAAAAAADy////BAADAAAAAADy/wAABAADAAAAAADy/wEABAADAAAAAADy/wIABAADAAAAAADy/wMABAADAAAAAADy/wQABAADAAAAAADy/wUABAADAAAAAADy/wYAAAAAAAEAAADy/wcAAAAAAAEAAADy/wgAAAAAAAEAAADz//f/BAADAAAAAADz//j/BAADAAAAAADz//n/BAADAAAAAADz//r/BAADAAAAAADz//v/BAADAAAAAADz//z/BAADAAAAAADz//3/BAADAAAAAADz//7/BAADAAAAAADz////BAADAAAAAADz/wAABAADAAAAAADz/wEABAADAAAAAADz/wIABAADAAAAAADz/wMABAADAAAAAADz/wQABAADAAAAAADz/wUABAADAAAAAADz/wYAAAAAAAEAAADz/wcAAAAAAAEAAADz/wgAAAAAAAEAAAD0//f/BAADAAAAAAD0//j/BAADAAAAAAD0//n/BAADAAAAAAD0//r/BAADAAAAAAD0//v/BAADAAAAAAD0//z/BAADAAAAAAD0//3/BAADAAAAAAD0//7/BAADAAAAAAD0////BAADAAAAAAD0/wAABAADAAAAAAD0/wEABAADAAAAAAD0/wIABAADAAAAAAD0/wMABAADAAAAAAD0/wQABAADAAAAAAD0/wUABAADAAAAAAD0/wYAAAADAAEAAAD0/wcAAAAAAAEAAAD0/wgAAAAAAAEAAAD1//f/BAADAAAAAAD1//j/BAADAAAAAAD1//n/BAADAAAAAAD1//r/BAADAAAAAAD1//v/BAACAAAAAAD1//z/BAADAAAAAAD1//3/BAADAAAAAAD1//7/BAADAAAAAAD1////BAADAAAAAAD1/wAABAADAAAAAAD1/wEABAADAAAAAAD1/wIABAADAAAAAAD1/wMABAADAAAAAAD1/wQABAADAAAAAAD1/wUABAADAAAAAAD1/wYAAAAAAAEAAAD1/wcAAAAAAAEAAAD1/wgAAAAAAAEAAAD2//f/BAADAAAAAAD2//j/BAADAAAAAAD2//n/BAADAAAAAAD2//r/BAACAAAAAAD2//v/BAACAAAAAAD2//z/BAACAAAAAAD2//3/BAACAAAAAAD2//7/BAADAAAAAAD2////BAADAAAAAAD2/wAABAADAAAAAAD2/wEABAADAAAAAAD2/wIABAADAAAAAAD2/wMABAADAAAAAAD2/wQABAADAAAAAAD2/wUABAADAAAAAAD2/wYAAAAAAAEAAAD2/wcAAAAAAAEAAAD2/wgAAAAAAAEAAAD3//f/BAADAAAAAAD3//j/BAADAAAAAAD3//n/BAADAAAAAAD3//r/BAADAAAAAAD3//v/BAADAAAAAAD3//z/BAADAAAAAAD3//3/BAADAAAAAAD3//7/BAADAAAAAAD3////BAADAAAAAAD3/wAABAADAAAAAAD3/wEABAADAAAAAAD3/wIABAADAAAAAAD3/wMABAADAAAAAAD3/wQABAADAAAAAAD3/wUABAADAAAAAAD3/wYAAAACAAAAAAD3/wcAAAAAAAEAAAD3/wgAAAAAAAEAAAD4//f/BAADAAAAAAD4//j/BAADAAAAAAD4//n/BAADAAAAAAD4//r/BAACAAAAAAD4//v/BAADAAAAAAD4//z/BAADAAAAAAD4//3/BAADAAAAAAD4//7/BAADAAAAAAD4////BAADAAAAAAD4/wAABAADAAAAAAD4/wEABAADAAAAAAD4/wIABAADAAAAAAD4/wMABAADAAAAAAD4/wQABAADAAAAAAD4/wUABAADAAAAAAD4/wYAAAAAAAEAAAD4/wcAAAAAAAEAAAD4/wgAAAAAAAEAAAD5//f/BAADAAAAAAD5//j/BAADAAAAAAD5//n/BAADAAAAAAD5//r/BAADAAAAAAD5//v/BAADAAAAAAD5//z/BAADAAAAAAD5//3/BAADAAAAAAD5//7/BAADAAAAAAD5////BAADAAAAAAD5/wAABAADAAAAAAD5/wEABAADAAAAAAD5/wIABAADAAAAAAD5/wMABAADAAAAAAD5/wQABAADAAAAAAD5/wUABAADAAAAAAD5/wYAAAACAAAAAAD5/wcAAAAAAAEAAAD5/wgAAAAAAAEAAAD6//f/BAADAAAAAAD6//j/BAADAAAAAAD6//n/BAADAAAAAAD6//r/BAADAAAAAAD6//v/BAADAAAAAAD6//z/BAADAAAAAAD6//3/BAADAAAAAAD6//7/BAADAAAAAAD6////BAADAAAAAAD6/wAABAADAAAAAAD6/wEABAADAAAAAAD6/wIABAADAAAAAAD6/wMABAADAAAAAAD6/wQABAADAAAAAAD6/wUABAADAAAAAAD6/wYAAAAAAAEAAAD6/wcAAAAAAAEAAAD6/wgAAAAAAAEAAAD7//f/BAADAAAAAAD7//j/BAADAAAAAAD7//n/BAADAAAAAAD7//r/BAADAAAAAAD7//v/BAADAAAAAAD7//z/BAADAAAAAAD7//3/BAADAAAAAAD7//7/BAADAAAAAAD7////BAADAAAAAAD7/wAABAADAAAAAAD7/wEABAADAAAAAAD7/wIABAADAAAAAAD7/wMABAADAAAAAAD7/wQABAADAAAAAAD7/wUABAADAAAAAAD7/wYAAAACAAAAAAD7/wcAAAAAAAEAAAD7/wgAAAAAAAEAAAD8//f/BAADAAAAAAD8//j/BAADAAAAAAD8//n/BAADAAAAAAD8//r/BAADAAAAAAD8//v/BAADAAAAAAD8//z/BAADAAAAAAD8//3/BAADAAAAAAD8//7/BAADAAAAAAD8////BAADAAAAAAD8/wAABAADAAAAAAD8/wEABAADAAAAAAD8/wIABAADAAAAAAD8/wMABAADAAAAAAD8/wQABAADAAAAAAD8/wUABAADAAAAAAD8/wYAAAAAAAEAAAD8/wcAAAAAAAEAAAD8/wgAAAAAAAEAAAD9//f/BAADAAAAAAD9//j/BAADAAAAAAD9//n/BAADAAAAAAD9//r/BAADAAAAAAD9//v/BAADAAAAAAD9//z/BAACAAAAAAD9//3/BAACAAAAAAD9//7/BAACAAAAAAD9////BAACAAAAAAD9/wAABAACAAAAAAD9/wEABAACAAAAAAD9/wIABAADAAAAAAD9/wMABAADAAAAAAD9/wQABAADAAAAAAD9/wUABAADAAAAAAD9/wYAAAACAAAAAAD9/wcAAAAAAAEAAAD9/wgAAAAAAAEAAAD+//f/BAADAAAAAAD+//j/BAADAAAAAAD+//n/BAADAAAAAAD+//r/BAADAAAAAAD+//v/BAADAAAAAAD+//z/BAACAAAAAAD+//3/BAACAAAAAAD+//7/BAADAAAAAAD+////BAADAAAAAAD+/wAABAADAAAAAAD+/wEABAADAAAAAAD+/wIABAACAAAAAAD+/wMABAADAAAAAAD+/wQABAADAAAAAAD+/wUABAADAAAAAAD+/wYAAAAAAAEAAAD+/wcAAAAAAAEAAAD+/wgAAAAAAAEAAAD///f/BAADAAAAAAD///j/BAADAAAAAAD///n/BAADAAAAAAD///r/BAADAAAAAAD///v/BAACAAAAAAD///z/BAADAAAAAAD///3/BAADAAAAAAD///7/BAACAAAAAAD/////BAADAAAAAAD//wAABAADAAAAAAD//wEABAADAAAAAAD//wIABAADAAAAAAD//wMABAACAAAAAAD//wQABAADAAAAAAD//wUABAADAAAAAAD//wYAAAACAAAAAAD//wcAAAAAAAEAAAD//wgAAAAAAAEAAAAAAPf/BAADAAAAAAAAAPj/BAADAAAAAAAAAPn/BAADAAAAAAAAAPr/BAADAAAAAAAAAPv/BAACAAAAAAAAAPz/BAADAAAAAAAAAP3/BAADAAAAAAAAAP7/BAADAAAAAAAAAP//BAACAAAAAAAAAAAABAADAAAAAAAAAAEABAADAAAAAAAAAAIABAADAAAAAAAAAAMABAADAAAAAAAAAAQABAACAAAAAAAAAAUABAADAAAAAAAAAAYAAAAAAAEAAAAAAAcAAAAAAAEAAAAAAAgAAAAAAAEAAAABAPf/BAADAAAAAAABAPj/BAADAAAAAAABAPn/BAADAAAAAAABAPr/BAACAAAAAAABAPv/BAADAAAAAAABAPz/BAADAAAAAAABAP3/BAADAAAAAAABAP7/BAADAAAAAAABAP//BAADAAAAAAABAAAABAACAAAAAAABAAEABAACAAAAAAABAAIABAACAAAAAAABAAMABAACAAAAAAABAAQABAACAAAAAAABAAUABAACAAAAAAABAAYAAAACAAAAAAABAAcAAAAAAAEAAAABAAgAAAAAAAEAAAACAPf/BAADAAAAAAACAPj/BAADAAAAAAACAPn/BAADAAAAAAACAPr/BAACAAAAAAACAPv/BAADAAAAAAACAPz/BAADAAAAAAACAP3/BAADAAAAAAACAP7/BAADAAAAAAACAP//BAADAAAAAAACAAAABAACAAAAAAACAAEABAADAAAAAAACAAIABAADAAAAAAACAAMABAADAAAAAAACAAQABAADAAAAAAACAAUABAACAAAAAAACAAYAAAAAAAEAAAACAAcAAAAAAAEAAAACAAgAAAAAAAEAAAADAPf/BAADAAAAAAADAPj/BAADAAAAAAADAPn/BAADAAAAAAADAPr/BAADAAAAAAADAPv/BAACAAAAAAADAPz/BAADAAAAAAADAP3/BAADAAAAAAADAP7/BAADAAAAAAADAP//BAACAAAAAAADAAAABAADAAAAAAADAAEABAADAAAAAAADAAIABAADAAAAAAADAAMABAADAAAAAAADAAQABAACAAAAAAADAAUABAADAAAAAAADAAYAAAAAAAEAAAADAAcAAAAAAAEAAAADAAgAAAAAAAEAAAAEAPf/BAADAAAAAAAEAPj/BAADAAAAAAAEAPn/BAADAAAAAAAEAPr/BAADAAAAAAAEAPv/BAADAAAAAAAEAPz/BAACAAAAAAAEAP3/BAADAAAAAAAEAP7/BAADAAAAAAAEAP//BAACAAAAAAAEAAAABAADAAAAAAAEAAEABAADAAAAAAAEAAIABAADAAAAAAAEAAMABAADAAAAAAAEAAQABAACAAAAAAAEAAUABAADAAAAAAAEAAYAAAAAAAEAAAAEAAcAAAAAAAEAAAAEAAgAAAAAAAEAAAAFAPf/BAADAAAAAAAFAPj/BAADAAAAAAAFAPn/BAADAAAAAAAFAPr/BAADAAAAAAAFAPv/BAADAAAAAAAFAPz/BAADAAAAAAAFAP3/BAACAAAAAAAFAP7/BAACAAAAAAAFAP//BAADAAAAAAAFAAAABAADAAAAAAAFAAEABAADAAAAAAAFAAIABAADAAAAAAAFAAMABAACAAAAAAAFAAQABAADAAAAAAAFAAUABAADAAAAAAAFAAYAAAAAAAEAAAAFAAcAAAAAAAEAAAAFAAgAAAAAAAEAAAAGAPf/BAADAAAAAAAGAPj/BAADAAAAAAAGAPn/BAADAAAAAAAGAPr/BAADAAAAAAAGAPv/BAADAAAAAAAGAPz/BAADAAAAAAAGAP3/BAADAAAAAAAGAP7/BAACAAAAAAAGAP//BAACAAAAAAAGAAAABAACAAAAAAAGAAEABAACAAAAAAAGAAIABAACAAAAAAAGAAMABAADAAAAAAAGAAQABAADAAAAAAAGAAUABAADAAAAAAAGAAYAAAAAAAEAAAAGAAcAAAAAAAEAAAAGAAgAAAAAAAEAAAAHAPf/BAADAAAAAAAHAPj/BAADAAAAAAAHAPn/BAADAAAAAAAHAPr/BAADAAAAAAAHAPv/BAADAAAAAAAHAPz/BAADAAAAAAAHAP3/BAADAAAAAAAHAP7/BAADAAAAAAAHAP//BAADAAAAAAAHAAAABAADAAAAAAAHAAEABAADAAAAAAAHAAIABAADAAAAAAAHAAMABAADAAAAAAAHAAQABAADAAAAAAAHAAUABAADAAAAAAAHAAYAAAAAAAEAAAAHAAcAAAAAAAEAAAAHAAgAAAAAAAEAAAAIAPf/BAADAAAAAAAIAPj/BAADAAAAAAAIAPn/BAADAAAAAAAIAPr/BAADAAAAAAAIAPv/BAADAAAAAAAIAPz/BAADAAAAAAAIAP3/BAADAAAAAAAIAP7/BAADAAAAAAAIAP//BAADAAAAAAAIAAAABAADAAAAAAAIAAEABAADAAAAAAAIAAIABAADAAAAAAAIAAMABAADAAAAAAAIAAQABAADAAAAAAAIAAUABAADAAAAAAAIAAYAAAAAAAEAAAAIAAcAAAAAAAEAAAAIAAgAAAAAAAEAAAAJAPf/BAADAAAAAAAJAPj/BAADAAAAAAAJAP3/BAADAAAAAAAJAP7/BAADAAAAAAAJAP//BAADAAAAAAAJAAAABAADAAAAAAAJAAEABAADAAAAAAAJAAIABAADAAAAAAAJAAMABAADAAAAAAAJAAQABAADAAAAAAAJAAUABAADAAAAAAAJAAYAAAAAAAEAAAAJAAcAAAAAAAEAAAAJAAgAAAAAAAEAAAAKAPf/BAADAAAAAAAKAPj/BAADAAAAAAAKAP3/BAADAAAAAAAKAP7/BAADAAAAAAAKAP//BAADAAAAAAAKAAAABAADAAAAAAAKAAEABAADAAAAAAAKAAIABAADAAAAAAAKAAMABAADAAAAAAAKAAQABAADAAAAAAAKAAUABAADAAAAAAAKAAYAAAAAAAEAAAAKAAcAAAAAAAEAAAAKAAgAAAAAAAEAAAALAPf/BAADAAAAAAALAPj/BAADAAAAAAALAP3/BAADAAAAAAALAP7/BAADAAAAAAALAP//BAADAAAAAAALAAAABAADAAAAAAALAAEABAADAAAAAAALAAIABAADAAAAAAALAAMABAADAAAAAAALAAQABAADAAAAAAALAAUABAADAAAAAAALAAYAAAAAAAEAAAALAAcAAAAAAAEAAAALAAgAAAAAAAEAAAAMAPf/BAADAAAAAAAMAPj/BAADAAAAAAAMAP3/BAADAAAAAAAMAP7/BAADAAAAAAAMAP//BAADAAAAAAAMAAAABAADAAAAAAAMAAEABAADAAAAAAAMAAIABAADAAAAAAAMAAMABAADAAAAAAAMAAQABAADAAAAAAAMAAUABAADAAAAAAAMAAYAAAAAAAEAAAAMAAcAAAAAAAEAAAAMAAgAAAAAAAEAAAANAPf/BAADAAAAAAANAPj/BAADAAAAAAANAPn/BAADAAAAAAANAPr/BAADAAAAAAANAPv/BAADAAAAAAANAPz/BAADAAAAAAANAP3/BAADAAAAAAANAP7/BAADAAAAAAANAP//BAADAAAAAAANAAAABAADAAAAAAANAAEABAADAAAAAAANAAIABAADAAAAAAANAAMABAADAAAAAAANAAQABAADAAAAAAANAAUABAADAAAAAAANAAYAAAAAAAEAAAANAAcAAAAAAAEAAAANAAgAAAAAAAEAAAAOAPf/BAADAAAAAAAOAPj/BAADAAAAAAAOAPn/BAADAAAAAAAOAPr/BAADAAAAAAAOAPv/BAADAAAAAAAOAPz/BAADAAAAAAAOAP3/BAADAAAAAAAOAP7/BAADAAAAAAAOAP//BAADAAAAAAAOAAAABAADAAAAAAAOAAEABAADAAAAAAAOAAIABAADAAAAAAAOAAMABAADAAAAAAAOAAQABAADAAAAAAAOAAUABAADAAAAAAAOAAYAAAAAAAEAAAAOAAcAAAAAAAEAAAAOAAgAAAAAAAEAAAAJAPn/BAADAAAAAAAJAPr/BAADAAAAAAAJAPv/BAADAAAAAAAJAPz/BAADAAAAAAAKAPn/BAADAAAAAAAKAPr/BAADAAAAAAAKAPv/BAADAAAAAAAKAPz/BAADAAAAAAALAPn/BAADAAAAAAALAPr/BAADAAAAAAALAPv/BAADAAAAAAALAPz/BAADAAAAAAAMAPn/BAADAAAAAAAMAPr/BAADAAAAAAAMAPv/BAADAAAAAAAMAPz/BAADAAAAAAA=")
tile_set = SubResource("TileSet_butt4")

[node name="Front" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD2/wYAAQADAAAAAAD2/wcAAQADAAAAAAD1/wYAAQAAAAAAAAD1/wcAAQAAAAAAAAAIAPz/AQAJAAAAAAAJAPn/AQAAAAAAAAAJAPr/AQAAAAAAAAAJAPv/AQAIAAAAAAAJAPz/AQACAAAAAAAKAPn/AQADAAAAAAAKAPr/AQADAAAAAAAKAPz/AQACAAAAAAALAPz/AQAKAAAAAAAKAPv/AQALAAAAAAA=")
tile_set = SubResource("TileSet_butt4")

[node name="PassScreen" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AADx//f/AwACAAEAAADx//j/AwACAAEAAADx//n/AwACAAEAAADx//r/AwACAAEAAADx//v/AwACAAEAAADx//z/AwACAAEAAADx//3/AwACAAEAAADx//7/AwACAAEAAADx////AwACAAEAAADx/wAAAwACAAEAAADx/wEAAwACAAEAAADx/wIAAwACAAEAAADx/wMAAwACAAEAAADx/wQAAwACAAEAAADx/wUAAwACAAEAAADy//f/AwACAAEAAADy//j/AwACAAEAAADy//n/AwACAAEAAADy//r/AwACAAEAAADy//v/AwACAAEAAADy//z/AwACAAEAAADy//3/AwACAAEAAADy//7/AwACAAEAAADy////AwACAAEAAADy/wAAAwACAAEAAADy/wEAAwACAAEAAADy/wIAAwACAAEAAADy/wMAAwACAAEAAADy/wQAAwACAAEAAADy/wUAAwACAAEAAADz//f/AwACAAEAAADz//j/AwACAAEAAADz//n/AwACAAEAAADz//r/AwACAAEAAADz//v/AwACAAEAAADz//z/AwACAAEAAADz//3/AwACAAEAAADz//7/AwACAAEAAADz////AwACAAEAAADz/wAAAwACAAEAAADz/wEAAwACAAEAAADz/wIAAwACAAEAAADz/wMAAwACAAEAAADz/wQAAwACAAEAAADz/wUAAwACAAEAAAD0//f/AwACAAEAAAD0//j/AwACAAEAAAD0//n/AwACAAEAAAD0//r/AwACAAEAAAD0//v/AwACAAEAAAD0//z/AwACAAEAAAD0//3/AwACAAEAAAD0//7/AwACAAEAAAD0////AwACAAEAAAD0/wAAAwACAAEAAAD0/wEAAwACAAEAAAD0/wIAAwACAAEAAAD0/wMAAwACAAEAAAD0/wQAAwACAAEAAAD0/wUAAwACAAEAAAD1//f/AwACAAEAAAD1//j/AwACAAEAAAD1//n/AwACAAEAAAD1//r/AwACAAEAAAD1//v/AwACAAEAAAD1//z/AwACAAEAAAD1//3/AwACAAEAAAD1//7/AwACAAEAAAD1////AwACAAEAAAD1/wAAAwACAAEAAAD1/wEAAwACAAEAAAD1/wIAAwACAAEAAAD1/wMAAwACAAEAAAD1/wQAAwACAAEAAAD1/wUAAwACAAEAAAD2//f/AwACAAEAAAD2//j/AwACAAEAAAD2//n/AwACAAEAAAD2//r/AwACAAEAAAD2//v/AwACAAEAAAD2//z/AwACAAEAAAD2//3/AwACAAEAAAD2//7/AwACAAEAAAD2////AwACAAEAAAD2/wAAAwACAAEAAAD2/wEAAwACAAEAAAD2/wIAAwACAAEAAAD2/wMAAwACAAEAAAD2/wQAAwACAAEAAAD2/wUAAwACAAEAAAD3//f/AwACAAEAAAD3//j/AwACAAEAAAD3//n/AwACAAEAAAD3//r/AwACAAEAAAD3//v/AwACAAEAAAD3//z/AwACAAEAAAD3//3/AwACAAEAAAD3//7/AwACAAEAAAD3////AwACAAEAAAD3/wAAAwACAAEAAAD3/wEAAwACAAEAAAD3/wIAAwACAAEAAAD3/wMAAwACAAEAAAD3/wQAAwACAAEAAAD3/wUAAwACAAEAAAD4//f/AwACAAEAAAD4//j/AwACAAEAAAD4//n/AwACAAEAAAD4//r/AwACAAEAAAD4//v/AwACAAEAAAD4//z/AwACAAEAAAD4//3/AwACAAEAAAD4//7/AwACAAEAAAD4////AwACAAEAAAD4/wAAAwACAAEAAAD4/wEAAwACAAEAAAD4/wIAAwACAAEAAAD4/wMAAwACAAEAAAD4/wQAAwACAAEAAAD4/wUAAwACAAEAAAD5//f/AwACAAEAAAD5//j/AwACAAEAAAD5//n/AwACAAEAAAD5//r/AwACAAEAAAD5//v/AwACAAEAAAD5//z/AwACAAEAAAD5//3/AwACAAEAAAD5//7/AwACAAEAAAD5////AwACAAEAAAD5/wAAAwACAAEAAAD5/wEAAwACAAEAAAD5/wIAAwACAAEAAAD5/wMAAwACAAEAAAD5/wQAAwACAAEAAAD5/wUAAwACAAEAAAD6//f/AwACAAEAAAD6//j/AwACAAEAAAD6//n/AwACAAEAAAD6//r/AwACAAEAAAD6//v/AwACAAEAAAD6//z/AwACAAEAAAD6//3/AwACAAEAAAD6//7/AwACAAEAAAD6////AwACAAEAAAD6/wAAAwACAAEAAAD6/wEAAwACAAEAAAD6/wIAAwACAAEAAAD6/wMAAwACAAEAAAD6/wQAAwACAAEAAAD6/wUAAwACAAEAAAD7//f/AwACAAEAAAD7//j/AwACAAEAAAD7//n/AwACAAEAAAD7//r/AwACAAEAAAD7//v/AwACAAEAAAD7//z/AwACAAEAAAD7//3/AwACAAEAAAD7//7/AwACAAEAAAD7////AwACAAEAAAD7/wAAAwACAAEAAAD7/wEAAwACAAEAAAD7/wIAAwACAAEAAAD7/wMAAwACAAEAAAD7/wQAAwACAAEAAAD7/wUAAwACAAEAAAD8//f/AwACAAEAAAD8//j/AwACAAEAAAD8//n/AwACAAEAAAD8//r/AwACAAEAAAD8//v/AwACAAEAAAD8//z/AwACAAEAAAD8//3/AwACAAEAAAD8//7/AwACAAEAAAD8////AwACAAEAAAD8/wAAAwACAAEAAAD8/wEAAwACAAEAAAD8/wIAAwACAAEAAAD8/wMAAwACAAEAAAD8/wQAAwACAAEAAAD8/wUAAwACAAEAAAD9//f/AwACAAEAAAD9//j/AwACAAEAAAD9//n/AwACAAEAAAD9//r/AwACAAEAAAD9//v/AwACAAEAAAD9//z/AwACAAEAAAD9//3/AwACAAEAAAD9//7/AwACAAEAAAD9////AwACAAEAAAD9/wAAAwACAAEAAAD9/wEAAwACAAEAAAD9/wIAAwACAAEAAAD9/wMAAwACAAEAAAD9/wQAAwACAAEAAAD9/wUAAwACAAEAAAD+//f/AwACAAEAAAD+//j/AwACAAEAAAD+//n/AwACAAEAAAD+//r/AwACAAEAAAD+//v/AwACAAEAAAD+//z/AwACAAEAAAD+//3/AwACAAEAAAD+//7/AwACAAEAAAD+////AwACAAEAAAD+/wAAAwACAAEAAAD+/wEAAwACAAEAAAD+/wIAAwACAAEAAAD+/wMAAwACAAEAAAD+/wQAAwACAAEAAAD+/wUAAwACAAEAAAD///f/AwACAAEAAAD///j/AwACAAEAAAD///n/AwACAAEAAAD///r/AwACAAEAAAD///v/AwACAAEAAAD///z/AwACAAEAAAD///3/AwACAAEAAAD///7/AwACAAEAAAD/////AwACAAEAAAD//wAAAwACAAEAAAD//wEAAwACAAEAAAD//wIAAwACAAEAAAD//wMAAwACAAEAAAD//wQAAwACAAEAAAD//wUAAwACAAEAAAAAAPf/AwACAAEAAAAAAPj/AwACAAEAAAAAAPn/AwACAAEAAAAAAPr/AwACAAEAAAAAAPv/AwACAAEAAAAAAPz/AwACAAEAAAAAAP3/AwACAAEAAAAAAP7/AwACAAEAAAAAAP//AwACAAEAAAAAAAAAAwACAAEAAAAAAAEAAwACAAEAAAAAAAIAAwACAAEAAAAAAAMAAwACAAEAAAAAAAQAAwACAAEAAAAAAAUAAwACAAEAAAABAPf/AwACAAEAAAABAPj/AwACAAEAAAABAPn/AwACAAEAAAABAPr/AwACAAEAAAABAPv/AwACAAEAAAABAPz/AwACAAEAAAABAP3/AwACAAEAAAABAP7/AwACAAEAAAABAP//AwACAAEAAAABAAAAAwACAAEAAAABAAEAAwACAAEAAAABAAIAAwACAAEAAAABAAMAAwACAAEAAAABAAQAAwACAAEAAAABAAUAAwACAAEAAAACAPf/AwACAAEAAAACAPj/AwACAAEAAAACAPn/AwACAAEAAAACAPr/AwACAAEAAAACAPv/AwACAAEAAAACAPz/AwACAAEAAAACAP3/AwACAAEAAAACAP7/AwACAAEAAAACAP//AwACAAEAAAACAAAAAwACAAEAAAACAAEAAwACAAEAAAACAAIAAwACAAEAAAACAAMAAwACAAEAAAACAAQAAwACAAEAAAACAAUAAwACAAEAAAADAPf/AwACAAEAAAADAPj/AwACAAEAAAADAPn/AwACAAEAAAADAPr/AwACAAEAAAADAPv/AwACAAEAAAADAPz/AwACAAEAAAADAP3/AwACAAEAAAADAP7/AwACAAEAAAADAP//AwACAAEAAAADAAAAAwACAAEAAAADAAEAAwACAAEAAAADAAIAAwACAAEAAAADAAMAAwACAAEAAAADAAQAAwACAAEAAAADAAUAAwACAAEAAAAEAPf/AwACAAEAAAAEAPj/AwACAAEAAAAEAPn/AwACAAEAAAAEAPr/AwACAAEAAAAEAPv/AwACAAEAAAAEAPz/AwACAAEAAAAEAP3/AwACAAEAAAAEAP7/AwACAAEAAAAEAP//AwACAAEAAAAEAAAAAwACAAEAAAAEAAEAAwACAAEAAAAEAAIAAwACAAEAAAAEAAMAAwACAAEAAAAEAAQAAwACAAEAAAAEAAUAAwACAAEAAAAFAPf/AwACAAEAAAAFAPj/AwACAAEAAAAFAPn/AwACAAEAAAAFAPr/AwACAAEAAAAFAPv/AwACAAEAAAAFAPz/AwACAAEAAAAFAP3/AwACAAEAAAAFAP7/AwACAAEAAAAFAP//AwACAAEAAAAFAAAAAwACAAEAAAAFAAEAAwACAAEAAAAFAAIAAwACAAEAAAAFAAMAAwACAAEAAAAFAAQAAwACAAEAAAAFAAUAAwACAAEAAAAGAPf/AwACAAEAAAAGAPj/AwACAAEAAAAGAPn/AwACAAEAAAAGAPr/AwACAAEAAAAGAPv/AwACAAEAAAAGAPz/AwACAAEAAAAGAP3/AwACAAEAAAAGAP7/AwACAAEAAAAGAP//AwACAAEAAAAGAAAAAwACAAEAAAAGAAEAAwACAAEAAAAGAAIAAwACAAEAAAAGAAMAAwACAAEAAAAGAAQAAwACAAEAAAAGAAUAAwACAAEAAAAHAPf/AwACAAEAAAAHAPj/AwACAAEAAAAHAPn/AwACAAEAAAAHAPr/AwACAAEAAAAHAPv/AwACAAEAAAAHAPz/AwACAAEAAAAHAP3/AwACAAEAAAAHAP7/AwACAAEAAAAHAP//AwACAAEAAAAHAAAAAwACAAEAAAAHAAEAAwACAAEAAAAHAAIAAwACAAEAAAAHAAMAAwACAAEAAAAHAAQAAwACAAEAAAAHAAUAAwACAAEAAAAIAPf/AwACAAEAAAAIAPj/AwACAAEAAAAIAPn/AwACAAEAAAAIAPr/AwACAAEAAAAIAPv/AwACAAEAAAAIAPz/AwACAAEAAAAIAP3/AwACAAEAAAAIAP7/AwACAAEAAAAIAP//AwACAAEAAAAIAAAAAwACAAEAAAAIAAEAAwACAAEAAAAIAAIAAwACAAEAAAAIAAMAAwACAAEAAAAIAAQAAwACAAEAAAAIAAUAAwACAAEAAAAJAPf/AwACAAEAAAAJAPj/AwACAAEAAAAJAPn/AwACAAEAAAAJAPr/AwACAAEAAAAJAPv/AwACAAEAAAAJAPz/AwACAAEAAAAJAP3/AwACAAEAAAAJAP7/AwACAAEAAAAJAP//AwACAAEAAAAJAAAAAwACAAEAAAAJAAEAAwACAAEAAAAJAAIAAwACAAEAAAAJAAMAAwACAAEAAAAJAAQAAwACAAEAAAAJAAUAAwACAAEAAAAKAPf/AwACAAEAAAAKAPj/AwACAAEAAAAKAPn/AwACAAEAAAAKAPr/AwACAAEAAAAKAPv/AwACAAEAAAAKAPz/AwACAAEAAAAKAP3/AwACAAEAAAAKAP7/AwACAAEAAAAKAP//AwACAAEAAAAKAAAAAwACAAEAAAAKAAEAAwACAAEAAAAKAAIAAwACAAEAAAAKAAMAAwACAAEAAAAKAAQAAwACAAEAAAAKAAUAAwACAAEAAAALAPf/AwACAAEAAAALAPj/AwACAAEAAAALAPn/AwACAAEAAAALAPr/AwACAAEAAAALAPv/AwACAAEAAAALAPz/AwACAAEAAAALAP3/AwACAAEAAAALAP7/AwACAAEAAAALAP//AwACAAEAAAALAAAAAwACAAEAAAALAAEAAwACAAEAAAALAAIAAwACAAEAAAALAAMAAwACAAEAAAALAAQAAwACAAEAAAALAAUAAwACAAEAAAAMAPf/AwACAAEAAAAMAPj/AwACAAEAAAAMAPn/AwACAAEAAAAMAPr/AwACAAEAAAAMAPv/AwACAAEAAAAMAPz/AwACAAEAAAAMAP3/AwACAAEAAAAMAP7/AwACAAEAAAAMAP//AwACAAEAAAAMAAAAAwACAAEAAAAMAAEAAwACAAEAAAAMAAIAAwACAAEAAAAMAAMAAwACAAEAAAAMAAQAAwACAAEAAAAMAAUAAwACAAEAAAANAPf/AwACAAEAAAANAPj/AwACAAEAAAANAPn/AwACAAEAAAANAPr/AwACAAEAAAANAPv/AwACAAEAAAANAPz/AwACAAEAAAANAP3/AwACAAEAAAANAP7/AwACAAEAAAANAP//AwACAAEAAAANAAAAAwACAAEAAAANAAEAAwACAAEAAAANAAIAAwACAAEAAAANAAMAAwACAAEAAAANAAQAAwACAAEAAAANAAUAAwACAAEAAAAOAPf/AwACAAEAAAAOAPj/AwACAAEAAAAOAPn/AwACAAEAAAAOAPr/AwACAAEAAAAOAPv/AwACAAEAAAAOAPz/AwACAAEAAAAOAP3/AwACAAEAAAAOAP7/AwACAAEAAAAOAP//AwACAAEAAAAOAAAAAwACAAEAAAAOAAEAAwACAAEAAAAOAAIAAwACAAEAAAAOAAMAAwACAAEAAAAOAAQAAwACAAEAAAAOAAUAAwACAAEAAAA=")
tile_set = SubResource("TileSet_butt4")

[node name="Label5" type="Label" parent="."]
offset_left = -571.0
offset_top = -324.0
offset_right = -462.0
offset_bottom = -301.0
text = "Esc to go back"
label_settings = SubResource("LabelSettings_qv2gn")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
z_index = 2
script = ExtResource("5_wgba0")

[node name="Polygon2D2" type="Polygon2D" parent="CharacterBody2D"]
position = Vector2(19, 19)
scale = Vector2(1.08333, 1.08333)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-24, -24, 6, 36, 11, 11, 36, 6)

[node name="Polygon2D" type="Polygon2D" parent="CharacterBody2D"]
position = Vector2(19, 19)
polygon = PackedVector2Array(-24, -24, 6, 36, 11, 11, 36, 6)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CharacterBody2D"]
position = Vector2(25, 25)
polygon = PackedVector2Array(-30, -30, 30, 0, 5, 5, 0, 30)

[node name="InteractingComponent" parent="CharacterBody2D" instance=ExtResource("6_ppg1l")]
position = Vector2(19, 19)
scale = Vector2(0.8, 0.8)

[node name="Password" type="Node" parent="."]

[node name="Label" type="Label" parent="Password"]
offset_left = -204.0
offset_top = -155.0
offset_right = 204.0
offset_bottom = -100.0
size_flags_horizontal = 4
text = "Enter Code Password"
label_settings = SubResource("LabelSettings_1p0jb")

[node name="Label2" type="Label" parent="Password"]
visible = false
offset_left = -126.0
offset_top = 73.0
offset_right = 126.0
offset_bottom = 105.0
text = "Wrong code. Try again."
label_settings = SubResource("LabelSettings_n63ye")

[node name="Control" type="Control" parent="Password"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_n63ye")

[node name="LineEdit" type="LineEdit" parent="Password/Control"]
layout_mode = 0
offset_left = -205.0
offset_top = -61.0
offset_right = -125.0
offset_bottom = 62.0
theme = SubResource("Theme_n63ye")
alignment = 1
max_length = 1
keep_editing_on_text_submit = true
expand_to_text_length = true
caret_blink = true

[node name="LineEdit2" type="LineEdit" parent="Password/Control"]
layout_mode = 0
offset_left = -95.0
offset_top = -61.0
offset_right = -15.0
offset_bottom = 62.0
theme = SubResource("Theme_n63ye")
alignment = 1
max_length = 1
keep_editing_on_text_submit = true
expand_to_text_length = true
caret_blink = true

[node name="LineEdit3" type="LineEdit" parent="Password/Control"]
layout_mode = 0
offset_left = 15.0
offset_top = -61.0
offset_right = 95.0
offset_bottom = 62.0
theme = SubResource("Theme_n63ye")
alignment = 1
max_length = 1
keep_editing_on_text_submit = true
expand_to_text_length = true
caret_blink = true

[node name="LineEdit4" type="LineEdit" parent="Password/Control"]
layout_mode = 0
offset_left = 125.0
offset_top = -61.0
offset_right = 205.0
offset_bottom = 62.0
theme = SubResource("Theme_n63ye")
alignment = 1
max_length = 1
keep_editing_on_text_submit = true
expand_to_text_length = true
caret_blink = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 377.0
offset_top = -135.0
offset_right = 523.0
offset_bottom = -107.0
text = "File dowloaded"
label_settings = SubResource("LabelSettings_wgba0")

[node name="Download" type="StaticBody2D" parent="."]
position = Vector2(450, -225)
script = ExtResource("9_wgba0")

[node name="Interactable" parent="Download" instance=ExtResource("8_0k2wj")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Download/Interactable"]
shape = SubResource("RectangleShape2D_ppg1l")
disabled = true
